<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="418px"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dp_30"
    android:layout_marginRight="@dimen/dp_30">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="@dimen/dp_270"
        android:layout_height="418px"
        android:layout_gravity="center"
        android:background="@drawable/shape_juxing3"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prompt"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="95px"
            android:layout_height="95px"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12px"
            android:layout_marginTop="43px"
            android:src="@drawable/zhiwen" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/exit_app"
                android:textColor="#252525"
                android:textSize="46px" />

            <TextView
                android:id="@+id/message2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15px"
                android:layout_toEndOf="@id/message"
                android:gravity="center"
                android:text=""
                android:textColor="#252525"
                android:textSize="36px"
                android:visibility="visible" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:background="#F0F0F0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/cancel"
                android:textColor="@color/btntextcolor"
                android:textSize="43px" />

            <LinearLayout
                android:id="@+id/single_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:visibility="gone"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/neutral_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/dismiss"
                android:textColor="@color/btntextcolor"
                android:visibility="gone"
                android:textSize="43px" />

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:visibility="gone"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_btn_select"
                android:text="@string/confirm"
                android:visibility="gone"
                android:textColor="@color/btntextcolor"
                android:textSize="43px" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>